# Coding-Challenges

./: .gitignore  README.md
Advent of Code/: Cargo.toml  README.md
Advent of Code/src/: lib.rs  main.rs
Advent of Code/src/challenges/: mod.rs
Advent of Code/src/challenges/year_2015/: mod.rs
Advent of Code/src/challenges/year_2015/day_01/: mod.rs
Advent of Code/src/challenges/year_2015/day_02/: mod.rs
Advent of Code/src/challenges/year_2015/day_03/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_04/: mod.rs
Advent of Code/src/challenges/year_2015/day_05/: mod.rs
Advent of Code/src/challenges/year_2015/day_06/: mod.rs
Advent of Code/src/challenges/year_2015/day_07/: mod.rs
Advent of Code/src/challenges/year_2015/day_08/: mod.rs
Advent of Code/src/challenges/year_2015/day_09/: mod.rs
Advent of Code/src/challenges/year_2015/day_10/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_11/: mod.rs
Advent of Code/src/challenges/year_2015/day_12/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_13/: mod.rs
Advent of Code/src/challenges/year_2015/day_14/: mod.rs
Advent of Code/src/challenges/year_2015/day_15/: mod.rs
Advent of Code/src/challenges/year_2015/day_16/: mod.rs
Advent of Code/src/challenges/year_2015/day_17/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_18/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_19/: mod.rs
Advent of Code/src/challenges/year_2015/day_20/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_21/: mod.rs  text.txt
Advent of Code/src/challenges/year_2015/day_22/: mod.rs
Advent of Code/src/challenges/year_2015/day_23/: mod.rs
Advent of Code/src/challenges/year_2015/day_24/: mod.rs
Advent of Code/src/challenges/year_2015/day_25/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/: mod.rs
Advent of Code/src/challenges/year_2016/day_01/: mod.rs
Advent of Code/src/challenges/year_2016/day_02/: mod.rs
Advent of Code/src/challenges/year_2016/day_03/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_04/: mod.rs
Advent of Code/src/challenges/year_2016/day_05/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_06/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_07/: mod.rs
Advent of Code/src/challenges/year_2016/day_08/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_09/: mod.rs
Advent of Code/src/challenges/year_2016/day_10/: mod.rs
Advent of Code/src/challenges/year_2016/day_11/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_12/: mod.rs
Advent of Code/src/challenges/year_2016/day_13/: mod.rs
Advent of Code/src/challenges/year_2016/day_14/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_15/: mod.rs
Advent of Code/src/challenges/year_2016/day_16/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_17/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_18/: mod.rs  text.txt
Advent of Code/src/challenges/year_2016/day_19/: mod.rs  text.txt
Advent of Code/src/challenges/year_2017/: mod.rs
Advent of Code/src/challenges/year_2018/: mod.rs
Advent of Code/src/challenges/year_2019/: mod.rs
Advent of Code/src/challenges/year_2020/: mod.rs
Advent of Code/src/challenges/year_2021/: mod.rs
Advent of Code/src/challenges/year_2022/: mod.rs
Advent of Code/src/challenges/year_2023/: mod.rs
Advent of Code/src/challenges/year_2024/: mod.rs
Advent of Code/src/shared/: graph.rs  math.rs  mod.rs  structures.rs  tsp.rs
Advent of Code/tests/: 2015.rs  2016.rs  2017.rs  2018.rs  2019.rs  2020.rs  2021.rs  2022.rs  2023.rs  2024.rs
Advent of Code/tests/runner/: mod.rs
C Primer Plus (3rd edition)/: README.md  (+3 more)
English/C Primer Plus (3rd edition)/: CMakeLists.txt  README.md  exercises.h  main.c
English/C Primer Plus (3rd edition)/exercises/chapter 01/: exercise 01.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 02/: exercise 03.c  exercise 04.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 03/: exercise 02.c  exercise 03.c  exercise 04.c  exercise 06.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 04/: exercise 01.c  exercise 02.c  exercise 03.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 05/: exercise 06.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 06/: exercise 02.c  exercise 04.c  exercise 06.c  exercise 07.c  exercise 09.c  exercise 11.c  exercise 12.c  exercise 13.c  exercise 14.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 07/: exercise 03.c  exercise 04.c  exercise 06.c  exercise 07.c  exercise 08.c  exercise 10.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 08/: exercise 03.c  exercise 05.c  exercise 06.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 09/: exercise 03.c  exercise 06.c  exercise 07.c  exercise 08.c  exercise 09.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 10/: exercise 01.c  exercise 03.c  exercise 05.c  exercise 08.c  exercise 10.c  exercise 11.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 11/: exercise 02.c  exercise 04.c  exercise 11.c  exercise 12.c  exercise 13.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 12/: exercise 01.c  exercise 02.c  exercise 04.c  exercise 05.c  exercise 08.c  exercise 09.c  exercise 10.c  exercise 11.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 13/: exercise 02.c  exercise 03.c  exercise 04.c  exercise 06.c  exercise 07.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 14/: exercise 03.c  exercise 04.c  exercise 05.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 15/: exercise 02.c  exercise 03.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 16/: exercise 01.c  exercise 03.c  exercise 05.c  exercise 06.c  exercise 07.c  info.h
English/C Primer Plus (3rd edition)/exercises/chapter 17/: exercise 01.c  exercise 02.c  exercise 04.c  header 02.h  header 03.h  info.h
(+334 files in other folders)
