[package]
name = "advent_of_code"
description = "Advent of Code solutions in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[profile.test]
opt-level = 3

[dependencies]
clap = { version = "4.4.5", features = ["cargo"] }
itertools = "0.11.0"
md5 = "0.7.0"
once_cell = "1.18.0"
regex = "1.9.5"
serde_json = "1.0.107"
