[package]
name = "advent_of_code"
description = "Advent of Code solutions in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]

[profile.release]
lto = true

[profile.test]
opt-level = 3

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
itertools = "0.13.0"
md5 = "0.7.0"
num-traits = "0.2.19"
once_cell = "1.19.0"
regex = "1.10.5"
serde_json = "1.0.120"
