cmake_minimum_required(VERSION 3.25)
project(C_Primer_Plus C)

set(CMAKE_C_STANDARD 23)

add_executable(
        C_Primer_Plus
        main.c
        exercises.h
        "exercises/chapter 01/info.h"
        "exercises/chapter 02/info.h"
        "exercises/chapter 03/info.h"
        "exercises/chapter 04/info.h"
        "exercises/chapter 05/info.h"
        "exercises/chapter 06/info.h"
        "exercises/chapter 07/info.h"
        "exercises/chapter 08/info.h"
        "exercises/chapter 09/info.h"
        "exercises/chapter 10/info.h"
        "exercises/chapter 11/info.h"
        "exercises/chapter 01/exercise 01.c"
        "exercises/chapter 02/exercise 01.c"
        "exercises/chapter 02/exercise 02.c"
        "exercises/chapter 02/exercise 03.c"
        "exercises/chapter 02/exercise 04.c"
        "exercises/chapter 02/exercise 05.c"
        "exercises/chapter 02/exercise 06.c"
        "exercises/chapter 03/exercise 01.c"
        "exercises/chapter 03/exercise 02.c"
        "exercises/chapter 03/exercise 03.c"
        "exercises/chapter 03/exercise 04.c"
        "exercises/chapter 03/exercise 05.c"
        "exercises/chapter 03/exercise 06.c"
        "exercises/chapter 04/exercise 01.c"
        "exercises/chapter 04/exercise 02.c"
        "exercises/chapter 04/exercise 03.c"
        "exercises/chapter 04/exercise 04.c"
        "exercises/chapter 04/exercise 05.c"
        "exercises/chapter 05/exercise 01.c"
        "exercises/chapter 05/exercise 02.c"
        "exercises/chapter 05/exercise 03.c"
        "exercises/chapter 05/exercise 04.c"
        "exercises/chapter 05/exercise 05.c"
        "exercises/chapter 05/exercise 06.c"
        "exercises/chapter 06/exercise 01.c"
        "exercises/chapter 06/exercise 02.c"
        "exercises/chapter 06/exercise 03.c"
        "exercises/chapter 06/exercise 04.c"
        "exercises/chapter 06/exercise 05.c"
        "exercises/chapter 06/exercise 06.c"
        "exercises/chapter 06/exercise 07.c"
        "exercises/chapter 06/exercise 08.c"
        "exercises/chapter 06/exercise 09.c"
        "exercises/chapter 06/exercise 10.c"
        "exercises/chapter 06/exercise 11.c"
        "exercises/chapter 06/exercise 12.c"
        "exercises/chapter 06/exercise 13.c"
        "exercises/chapter 06/exercise 14.c"
        "exercises/chapter 07/exercise 01.c"
        "exercises/chapter 07/exercise 02.c"
        "exercises/chapter 07/exercise 03.c"
        "exercises/chapter 07/exercise 04.c"
        "exercises/chapter 07/exercise 05.c"
        "exercises/chapter 07/exercise 06.c"
        "exercises/chapter 07/exercise 07.c"
        "exercises/chapter 07/exercise 08.c"
        "exercises/chapter 07/exercise 09.c"
        "exercises/chapter 07/exercise 10.c"
        "exercises/chapter 08/exercise 01.c"
        "exercises/chapter 08/exercise 02.c"
        "exercises/chapter 08/exercise 03.c"
        "exercises/chapter 08/exercise 04.c"
        "exercises/chapter 08/exercise 05.c"
        "exercises/chapter 08/exercise 06.c"
        "exercises/chapter 08/exercise 07.c"
        "exercises/chapter 09/exercise 01.c"
        "exercises/chapter 09/exercise 02.c"
        "exercises/chapter 09/exercise 03.c"
        "exercises/chapter 09/exercise 04.c"
        "exercises/chapter 09/exercise 05.c"
        "exercises/chapter 09/exercise 06.c"
        "exercises/chapter 09/exercise 07.c"
        "exercises/chapter 09/exercise 08.c"
        "exercises/chapter 09/exercise 09.c"
        "exercises/chapter 10/exercise 01.c"
        "exercises/chapter 10/exercise 02.c"
        "exercises/chapter 10/exercise 03.c"
        "exercises/chapter 10/exercise 04.c"
        "exercises/chapter 10/exercise 05.c"
        "exercises/chapter 10/exercise 06.c"
        "exercises/chapter 10/exercise 07.c"
        "exercises/chapter 10/exercise 08.c"
        "exercises/chapter 10/exercise 09.c"
        "exercises/chapter 10/exercise 10.c"
        "exercises/chapter 10/exercise 11.c"
        "exercises/chapter 11/exercise 01.c"
        "exercises/chapter 11/exercise 02.c"
        "exercises/chapter 11/exercise 03.c"
        "exercises/chapter 11/exercise 04.c"
        "exercises/chapter 11/exercise 05.c"
        "exercises/chapter 11/exercise 06.c"
        "exercises/chapter 11/exercise 07.c"
        "exercises/chapter 11/exercise 08.c"
        "exercises/chapter 11/exercise 09.c"
        "exercises/chapter 11/exercise 10.c"
        "exercises/chapter 11/exercise 11.c"
        "exercises/chapter 11/exercise 12.c"
        "exercises/chapter 11/exercise 13.c"
        "exercises/chapter 11/exercise 14.c"
        "exercises/chapter 11/exercise 15.c"
)
